--- a/yea-mobile/web/index.xhtml
+++ b/yea-mobile/web/index.xhtml
@@ -1,12 +1,21 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Facelet Title</title>
+        <meta http-equiv="Content-Type"  
+              content="text/html; charset=UTF-8" />  
+        <title>Home Page</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <ui:composition template=".\siteTemplate.xhtml">  
+            <ui:define name="content">  
+
+            </ui:define>
+        </ui:composition>  
     </h:body>
 </html>
 
