--- a/yea-mobile/web/user.xhtml
+++ b/yea-mobile/web/user.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <meta http-equiv="Content-Type"  
               content="text/html; charset=UTF-8" />  
@@ -85,24 +86,26 @@
                             </h:inputText >  
                         </div>  
                     </div>
-                    <div class="form-group">  
-                        <h:outputLabel for="password" class="control-label col-sm-4">The User is a Manager</h:outputLabel>  
-                        <div class="col-sm-4">  
-                            <h:selectBooleanCheckbox id="manager-id" value="#{user.manager}" class="form-check-input"   
-                                                     validatorMessage="Specify whether the user is a manager">  
-                                <f:validateRequired/>  
-                            </h:selectBooleanCheckbox>  
-                        </div>  
-                    </div>
-                    <div class="form-group">  
-                        <h:outputLabel for="password" class="control-label col-sm-4">The User is active</h:outputLabel>  
-                        <div class="col-sm-4">  
-                            <h:selectBooleanCheckbox id="active-id" value="#{user.active}" class="form-check-input"   
-                                                     validatorMessage="Specify whether the user is active">  
-                                <f:validateRequired/>  
-                            </h:selectBooleanCheckbox>  
-                        </div>  
-                    </div>
+                    <c:if test="#{user.manager}">
+                        <div class="form-group">  
+                            <h:outputLabel for="password" class="control-label col-sm-4">The User is a Manager</h:outputLabel>  
+                            <div class="col-sm-4">  
+                                <h:selectBooleanCheckbox id="manager-id" value="#{user.manager}" class="form-check-input"   
+                                                         validatorMessage="Specify whether the user is a manager">  
+                                    <f:validateRequired/>  
+                                </h:selectBooleanCheckbox>  
+                            </div>  
+                        </div>
+                        <div class="form-group">  
+                            <h:outputLabel for="password" class="control-label col-sm-4">The User is active</h:outputLabel>  
+                            <div class="col-sm-4">  
+                                <h:selectBooleanCheckbox id="active-id" value="#{user.active}" class="form-check-input"   
+                                                         validatorMessage="Specify whether the user is active">  
+                                    <f:validateRequired/>  
+                                </h:selectBooleanCheckbox>  
+                            </div>  
+                        </div>
+                    </c:if>
                     <div class="form-group">  
                         <div class="col-sm-4"></div>  
                         <div class="col-sm-4">  
