--- a/yea-mobile/web/products.xhtml
+++ b/yea-mobile/web/products.xhtml
@@ -8,54 +8,52 @@
     <h:head>
         <meta http-equiv="Content-Type"  
               content="text/html; charset=UTF-8" />  
-        <title>Users Records</title>
+        <title>Products</title>
     </h:head>
     <h:body>
         <ui:composition template=".\siteTemplate.xhtml">  
             <ui:define name="content">  
                 <h:form>  
                     <center>  
-                        <h2><h:outputText value="User Records"/></h2>  
+                        <h2><h:outputText value="Products"/></h2>  
                     </center>  
-                    <h:dataTable binding="#{table}" value="#{user.getUsersList()}" var="u"   
+                    <h:dataTable binding="#{table}" value="#{product.getProductsList()}" var="p"   
                                  class="table table-striped table-hover table-bordered">  
                         <h:column>  
                             <f:facet name="header"></f:facet>  
                             <h:outputText value="#{table.rowIndex + 1}"/>  
                         </h:column>  
                         <h:column>  
-                            <f:facet name="header">Username</f:facet>  
-                            <h:outputText value="#{u.username}"/>  
+                            <f:facet name="header">ID</f:facet>  
+                            <h:outputText value="#{p.pid}"/>  
                         </h:column>
                         <h:column>  
                             <f:facet name="header">Name</f:facet>  
-                            <h:outputText value="#{u.firstName} #{u.lastName}"/>  
+                            <h:outputText value="#{p.name}"/>  
                         </h:column>
                         <h:column>  
-                            <f:facet name="header">Email</f:facet>  
-                            <h:outputText value="#{u.email}"/>  
+                            <f:facet name="header">Price</f:facet>  
+                            <h:outputText value="#{p.price}"/>  
                         </h:column>  
                         <h:column>  
-                            <f:facet name="header">Is Manager</f:facet>  
-                            <h:outputText value="#{u.manager}"/>  
+                            <f:facet name="header">In Stock</f:facet>  
+                            <h:outputText value="#{p.inStock}"/>  
                         </h:column>
                         <h:column>  
-                            <f:facet name="header">Is Active</f:facet>  
-                            <h:outputText value="#{u.active}"/>  
-                        </h:column>
-                        <h:column>  
-                            <f:facet name="header">Update</f:facet>  
-                            <h:commandButton action = "#{user.edit(u.username)}" value="Update" class="btn btn-primary">  
+                            <f:facet name="header">Details</f:facet>  
+                            <h:commandButton action = "#{product.edit(p.pid)}" value="Details" class="btn btn-primary">  
                             </h:commandButton>  
                         </h:column>  
-                        <h:column>  
+                        <c:if test="#{loginController.isManagerLoggedIn()}">
+                            <h:column>  
                             <f:facet name="header">Delete</f:facet>  
-                            <h:commandButton action = "#{user.delete(u.username)}" value="Delete" class="btn btn-danger">  
+                            <h:commandButton action = "#{product.delete(p.pid)}" value="Delete" class="btn btn-danger">  
                             </h:commandButton>  
                         </h:column>  
+                        </c:if>
                     </h:dataTable>  
-                    <center><h:commandButton action = "#{user.createNewUser()}"   
-                                             value="Create New User" class="btn btn-success"></h:commandButton></center>  
+                    <center><h:commandButton action = "#{product.createNewProduct()}"   
+                                             value="Create New Product" class="btn btn-success"></h:commandButton></center>  
                 </h:form>
             </ui:define>
         </ui:composition>  
