--- a/yea-mobile/web/user.xhtml
+++ b/yea-mobile/web/user.xhtml
@@ -23,7 +23,7 @@
                     </div>  
                     <hr/>  
                     <div class="form-group row">  
-                        <h:outputLabel for="username" class="control-label col-sm-4">User Name</h:outputLabel>  
+                        <h:outputLabel for="username" class="control-label col-sm-4 text-right">User Name</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="username-id" value="#{user.username}" class="form-control"   
                                          validatorMessage="Username is required">  
@@ -31,7 +31,7 @@
                         </div>  
                     </div>
                     <div class="form-group row">  
-                        <h:outputLabel for="firstName" class="control-label col-sm-4">First Name</h:outputLabel>  
+                        <h:outputLabel for="firstName" class="control-label col-sm-4 text-right">First Name</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="firstName-id" value="#{user.firstName}" class="form-control"   
                                          validatorMessage="First name is required">  
@@ -39,7 +39,7 @@
                         </div>  
                     </div>
                     <div class="form-group row">  
-                        <h:outputLabel for="lastName" class="control-label col-sm-4">Last Name</h:outputLabel>  
+                        <h:outputLabel for="lastName" class="control-label col-sm-4 text-right">Last Name</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="lastName-id" value="#{user.lastName}" class="form-control"   
                                          validatorMessage="Last name is required">  
@@ -47,7 +47,7 @@
                         </div>  
                     </div>
                     <div class="form-group row">  
-                        <h:outputLabel for="email" class="control-label col-sm-4">Your Email</h:outputLabel>  
+                        <h:outputLabel for="email" class="control-label col-sm-4 text-right">Your Email</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="email-id" value="#{user.email}" class="form-control"   
                                          validatorMessage="Email is required">  
@@ -55,7 +55,7 @@
                         </div>  
                     </div>  
                     <div class="form-group row">  
-                        <h:outputLabel for="password" class="control-label col-sm-4">Password</h:outputLabel>  
+                        <h:outputLabel for="password" class="control-label col-sm-4 text-right">Password</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="password-id" value="#{user.password}" class="form-control"   
                                            validatorMessage="Password is required">  
@@ -63,7 +63,7 @@
                         </div>  
                     </div>
                     <div class="form-group row">  
-                        <h:outputLabel for="phoneNumber" class="control-label col-sm-4">Phone Number</h:outputLabel>  
+                        <h:outputLabel for="phoneNumber" class="control-label col-sm-4 text-right">Phone Number</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText id="phoneNumber-id" value="#{user.phoneNumber}" class="form-control"   
                                          validatorMessage="Phone number is required">  
@@ -71,7 +71,7 @@
                         </div>  
                     </div>
                     <div class="form-group row">  
-                        <h:outputLabel for="birthDate" class="control-label col-sm-4">Birth Date (yyyy-mm-dd)</h:outputLabel>  
+                        <h:outputLabel for="birthDate" class="control-label col-sm-4 text-right">Birth Date (yyyy-mm-dd)</h:outputLabel>  
                         <div class="col-sm-4">  
                             <h:inputText  id="birthDate-id" value="#{user.birthDate}" class="form-control"   
                                           validatorMessage="Birth date is required">  
@@ -81,7 +81,7 @@
                     </div>
                     <c:if test="#{loginController.isManagerLoggedIn()}">
                         <div class="form-group row">  
-                            <h:outputLabel for="manager" class="control-label col-sm-4">The User is a Manager</h:outputLabel>  
+                            <h:outputLabel for="manager" class="control-label col-sm-4 text-right">The User is a Manager</h:outputLabel>  
                             <div class="col-sm-4">  
                                 <h:selectBooleanCheckbox id="manager-id" value="#{user.manager}" class="form-check-input"   
                                                          validatorMessage="Specify whether the user is a manager">  
@@ -89,7 +89,7 @@
                             </div>  
                         </div>
                         <div class="form-group row">  
-                            <h:outputLabel for="active" class="control-label col-sm-4">The User is active</h:outputLabel>  
+                            <h:outputLabel for="active" class="control-label col-sm-4 text-right">The User is active</h:outputLabel>  
                             <div class="col-sm-4">  
                                 <h:selectBooleanCheckbox id="active-id" value="#{user.active}" class="form-check-input"   
                                                          validatorMessage="Specify whether the user is active">  
